tdf#142924 "toggled" is too late to use to populate changes to the menu

so use "state-flag-changed" on GTK_STATE_FLAG_CHECKED instead which
happens before "toggled"

Change-Id: I3a68212ce4bec2cda49d8bcaf3db864cb34013cc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/117437
Tested-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>